solo wouldnt end after last final kill, fixed